fix handling of special folder names to be case-insensitive, r=neil, bug 546728